# esp32_light_and_pump

./: .gitignore  CMakeLists.txt  Description.txt  Prompts.md  README.md  Requirements.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32dev  sdkconfig.old
components/aws_mqtt/: CMakeLists.txt  Kconfig  aws_mqtt.c
components/aws_mqtt/include/: aws_mqtt.h
components/aws_mqtt/test/: test_aws_mqtt.c
components/ble/: CMakeLists.txt  Kconfig  ble.c  ble_nimble.c  ble_stub.c  test_prov.json.example
components/ble/include/: ble.h
components/ble/test/: CMakeLists.txt  test_ble.c  test_ble_replay.c
components/control/: CMakeLists.txt  Kconfig  control.c
components/control/include/: control.h
components/control/test/: CMakeLists.txt  test_control.c
components/crypto/: CMakeLists.txt  crypto.c
components/crypto/include/: crypto.h
components/crypto/test/: CMakeLists.txt  test_crypto.c
components/net/: CMakeLists.txt  Kconfig  net.c
components/net/include/: net.h
components/net/test/: test_net.c
components/ota/: CMakeLists.txt  Kconfig  ota.c
components/ota/include/: ota.h
components/ota/test/: CMakeLists.txt  test_manifest.c  test_ota.c
components/provision_cli/: CMakeLists.txt  provision_cli.c
components/provision_cli/include/: provision_cli.h
components/safety/: CMakeLists.txt  Kconfig  safety.c
components/safety/include/: safety.h
components/safety/test/: CMakeLists.txt  test_safety.c
components/schedule/: CMakeLists.txt  Kconfig  schedule.c
components/schedule/include/: schedule.h
components/schedule/test/: CMakeLists.txt  test_schedule.c
components/secure_part/: CMakeLists.txt  secure_part.c
components/secure_part/include/: secure_part.h
components/storage/: CMakeLists.txt  Kconfig  storage.c
components/storage/include/: storage.h
components/storage/test/: CMakeLists.txt  test_storage.c
components/telemetry/: CMakeLists.txt  Kconfig  telemetry.c
components/telemetry/include/: telemetry.h
components/telemetry/test/: CMakeLists.txt  test_telemetry.c
main/: CMakeLists.txt  app_main.c  ipc.h
src/: aht10.c  aht10.h  ble_prov.c  ble_prov.h  http_server.c  main.c  mqtt_manager.c  mqtt_manager.h  ota_manager.c  ota_manager.h  pwm_ctrl.c  pwm_ctrl.h  scheduler.c  scheduler.h  storage.c  storage.h  wifi_manager.c  wifi_manager.h
tools/: keyid.py  provision_cert.py
